@@ -15,9 +15,10 @@ cell_assign_EM(A, D, Config, Psi = NULL, model = "binomial",
   logLik_threshold = 1e-05, verbose = TRUE)
 
 cell_assign_Gibbs(A, D, Config, Psi = NULL, A_germ = NULL,
-  D_germ = NULL, prior0 = c(0.3, 29.7), prior1 = c(2.25, 2.65),
-  model = "binomial", Bernoulli_threshold = 1, min_iter = 1000,
-  max_iter = 10000, wise = "variant", verbose = TRUE)
+  D_germ = NULL, relax_Config = NULL, prior0 = c(0.2, 99.8),
+  prior1 = c(0.45, 0.55), model = "binomial",
+  Bernoulli_threshold = 1, min_iter = 1000, max_iter = 10000,
+  wise = "variant", verbose = TRUE)
 }
 \arguments{
 \item{A}{variant x cell matrix of integers; number of alternative allele
@@ -63,6 +64,11 @@ heterozygous site for variant i cell j}
 
 \item{D_germ}{A matrix of integers. Number of reads depth in germline
 heterozygous site for variant i cell j}
+
+\item{relax_Config}{numeric(1), relaxing the Clone Configuration by changing
+it from fixed value to prior. The prior probability will be relax_Config and
+(1 - relax_Config) respectively for values 0 and 1 in original Config matrix.
+If it is relax_Config=NULL or <0 or >1, this utility will turned off.}
 
 \item{prior0}{numeric(2), alpha and beta parameters for the Beta prior
 distribution on the inferred false positive rate.}
